# playpen-fw

./: README.md
nucleo-g0/: Cargo.toml  Embed.toml  README.md
nucleo-g0/.cargo/: config.toml
nucleo-g0/embassy-g0b1/: Cargo.toml  README.md
nucleo-g0/embassy-g0b1/src/: main.rs
nucleo-g0/src/: main.rs
