[package]
authors = ["nwdepatie"]
edition = "2018"
readme = "README.md"
name = "nucleo-g0"
version = "0.1.0"

[dependencies]
cortex-m = { version="0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = "0.5.0"
embassy-futures = "0.1.1"
embassy-sync = "0.6.0"
embassy-time = "0.3.1"
panic-halt = "0.2.0"
rtt-target = "0.5.0"

[dependencies.stm32g0]
version = "0.15.1"
features = ["stm32g0b1"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.

# this lets you use `cargo fix`!
[[bin]]
name = "nucleo-g0"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
